Added authors, author details, publishers, publisher details, and series with series details pages.
